--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: My Name is : ${vars.MY_NAME}
+        run: My Name is Nagaraju
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
