--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run a one-line script
         run: |
           echo My Name is Nagaraju
-          echo "${vars.MY_NAME}"
+          echo "${{vars.MY_NAME}}"
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
