--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           echo My Name is Nagaraju
           echo "${{vars.MY_NAME}}"
+          echo "${{secrets.MY_NAME}}
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
