--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,6 +31,7 @@ jobs:
           echo My Name is Nagaraju
           echo "${{vars.MY_NAME}}"
           echo "${{secrets.MY_NAME}}"
+          echo "${{vars.MY_FRDNAME}}"
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
